After ISCA2020 shepherding (#54)
* remove something...

* some changes

* separate out dse

* implement a option to override parameters

* stash commit; let me impl a new power/area model

* commit to sync

* let me implement the heuristic

* fix the area/power of pe

* correct the model. dump the power number

* stash commit

* stash commit

* let me see what happens

* fix a big problem!@

* hmmm, merge

* sync commit

* hmmm, merge

* sync commit

* sync commit

* sync commit

* is this somehow good?

* hmm

* it is good!

* at least it gives good results for machsuite

* sync commit

* hmmmmm

* sync commit

* sync commit

* this is good for final results

* generate hw/sw/mapping Json file in batch

* ok...

* after shepherding

Co-authored-by: SihaoLiu <sihao@cs.ucla.edu>

--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -19,6 +19,9 @@ add_custom_command(
 file(GLOB_RECURSE CONFIG_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 add_library(ssconfig ${CONFIG_SRC} ${SS_INSTS_CXX})
 
+target_include_directories(ssconfig PRIVATE ${CMAKE_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
+target_link_libraries(ssconfig PRIVATE ${Boost_LIBRARIES})
+
 file(GLOB CONFIG_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 set_target_properties(ssconfig PROPERTIES PUBLIC_HEADER "${CONFIG_HEADERS}")
 
