--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_executable(ss_sched ss_sched.cpp)
-target_include_directories(ss_sched PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(ss_sched PRIVATE dsa ${Boost_LIBRARIES})
+target_include_directories(ss_sched PRIVATE
+  ${CMAKE_SOURCE_DIR}/src
+  ${CMAKE_SOURCE_DIR}/include
+  ${CMAKE_SOURCE_DIR}/json-parser/include)
+target_link_libraries(ss_sched PRIVATE dsa json ${Boost_LIBRARIES})
 
 add_executable(ss_dse ss_dse.cpp)
 target_include_directories(ss_dse PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/include)
