--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -6,7 +6,10 @@ target_include_directories(ss_sched PRIVATE
 target_link_libraries(ss_sched PRIVATE dsa json ${Boost_LIBRARIES})
 
 add_executable(ss_dse ss_dse.cpp)
-target_include_directories(ss_dse PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(ss_dse PRIVATE
+  ${CMAKE_SOURCE_DIR}/src
+  ${CMAKE_SOURCE_DIR}/include
+  ${CMAKE_SOURCE_DIR}/json-parser/include)
 target_link_libraries(ss_dse PRIVATE dsa ${Boost_LIBRARIES})
 
 install(TARGETS ss_sched)
