--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ else()
 endif()
 
 # Debug/Release
-set(CMAKE_CXX_FLAGS_DEBUG "-Wall -g")
-set(CMAKE_CXX_FLAGS_RELEASE "-Wall -O3")
+#set(CMAKE_CXX_FLAGS_DEBUG "-Wall -g")
+#set(CMAKE_CXX_FLAGS_RELEASE "-Wall -O3")
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   add_compile_definitions("DEBUG_MODE")
 endif()
