Move node to namespace. (#77)
* node namespace

* linkt

* calc cheap

* eliminate assert

* linting

* on the way

* for now commit something

* on the way to get poised for operation node

* on the way to get poised for customizable decomposability

* wip; refactoring sslink and node

* hmmmmmm

* lint

* the granularity

* on the way

* delete func

* scratch pad

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,12 @@ cmake_minimum_required(VERSION 3.12)
 
 project(SpatialScheduler)
 
-# Use config.cmake file
+execute_process(
+  COMMAND git rev-parse --show-toplevel
+  OUTPUT_VARIABLE REPO_PREFIX)
+
+string(REGEX REPLACE "\n$" "" REPO_PREFIX "${REPO_PREFIX}")
+
 if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/config.cmake)
   include(${CMAKE_CURRENT_BINARY_DIR}/config.cmake)
   message(STATUS "Using ${CMAKE_CURRENT_BINARY_DIR}/config.cmake")
@@ -26,6 +31,8 @@ endif()
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   add_compile_definitions("DEBUG_MODE")
 endif()
+
+add_definitions(-DREPO_PREFIX="${REPO_PREFIX}")
 
 # set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 add_compile_options(-fno-strict-aliasing)
