Fix granularity in DSE; support LLVM-ostream debugging (#79)
* fix granularity on dse

* fix the granularity of dse

* stash commit

* move ss-sched to cxxopts

* remove opts

* wip: on the way to unify two host enter

* move flag to a global singleton

* add debug llvm support

* update the debug core

--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(ss_sched ss_sched.cpp)
 target_include_directories(ss_sched PRIVATE
   ${CMAKE_SOURCE_DIR}/src
   ${CMAKE_SOURCE_DIR}/include
+  ${CMAKE_SOURCE_DIR}/3rd-party/cxxopts/include
   ${CMAKE_SOURCE_DIR}/json-parser/include)
 target_link_libraries(ss_sched PRIVATE dsa json)
 
@@ -9,6 +10,7 @@ add_executable(ss_dse ss_dse.cpp)
 target_include_directories(ss_dse PRIVATE
   ${CMAKE_SOURCE_DIR}/src
   ${CMAKE_SOURCE_DIR}/include
+  ${CMAKE_SOURCE_DIR}/3rd-party/cxxopts/include
   ${CMAKE_SOURCE_DIR}/json-parser/include)
 target_link_libraries(ss_dse PRIVATE dsa json)
 
