--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "json-parser"]
 	path = json-parser
 	url = https://github.com/were/json-parser
+[submodule "3rd-party/cxxopts"]
+	path = 3rd-party/cxxopts
+	url = https://github.com/jarro2783/cxxopts
