Write to register by predicates; migrate json parser to open source project (#83)

--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -3,18 +3,18 @@ target_include_directories(ss_sched PRIVATE
   ${CMAKE_SOURCE_DIR}/src
   ${CMAKE_SOURCE_DIR}/include
   ${CMAKE_SOURCE_DIR}/3rd-party/cxxopts/include
-  ${CMAKE_SOURCE_DIR}/json-parser/include
   ${CMAKE_INSTALL_PREFIX}/include)
-target_link_libraries(ss_sched PRIVATE dsa json)
+target_link_directories(ss_sched PRIVATE ${CMAKE_INSTALL_PREFIX}/lib ${CMAKE_INSTALL_PREFIX}/lib64)
+target_link_libraries(ss_sched PRIVATE dsa jsoncpp)
 
 add_executable(ss_dse ss_dse.cpp)
 target_include_directories(ss_dse PRIVATE
   ${CMAKE_SOURCE_DIR}/src
   ${CMAKE_SOURCE_DIR}/include
   ${CMAKE_SOURCE_DIR}/3rd-party/cxxopts/include
-  ${CMAKE_SOURCE_DIR}/json-parser/include
   ${CMAKE_INSTALL_PREFIX}/include)
-target_link_libraries(ss_dse PRIVATE dsa json)
+target_link_directories(ss_dse PRIVATE ${CMAKE_INSTALL_PREFIX}/lib ${CMAKE_INSTALL_PREFIX}/lib64)
+target_link_libraries(ss_dse PRIVATE dsa jsoncpp)
 
 install(TARGETS ss_sched)
 install(TARGETS ss_dse)
