--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,9 +57,12 @@ set(SS_INSTS_H ${CMAKE_SOURCE_DIR}/include/dsa/arch/ssinst.h)
 set(SS_INSTS_CXX ${CMAKE_SOURCE_DIR}/src/insts/ssinst.cpp)
 set(PA_MODEL ${CMAKE_SOURCE_DIR}/src/insts/"full.ssinst.power_area.csv")
 
+message(${CMAKE_BINARY_DIR})
+message(${CMAKE_CURRENT_BINARY_DIR})
+
 add_custom_command(
   OUTPUT ${SS_INSTS_H} ${SS_INSTS_CXX}
-  COMMAND ${CMAKE_CURRENT_BINARY_DIR}/inst_model ${INST_MODEL} ${PA_MODEL} ${SS_INSTS_H} ${SS_INSTS_CXX}
+  COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/inst_model ${INST_MODEL} ${PA_MODEL} ${SS_INSTS_H} ${SS_INSTS_CXX}
   DEPENDS inst_model
 )
 
