Added collapsing for switches; added logging ability; small bugfixes;
* some fix on dse

* initial commit of fpga schedule

* wip

* Added FPGA Model

* initial commit of multithread. Still working through segfault

* add 3rd-party zip

* make model path macro based

* fixed bug in multithread

* minor fixes

* fixed multithread

* minor bug fixes

* merge

* some fix on dse

* many changes

* merge fix

* minor fixes to thread workings

* merge errors fixed

* merge fixes

* make fixes

* hello

* merges

* merge fixes

* merges

* merge

* rebase

* rebase

* merges

* merges

* merges

* merge fixes

* rebase fixes

* submodule update

* DSE Updates. Added logs and collapsing

* rebase fixes

* fix driver

* sync commit

* fixed DSE switch collapsing

* dse changes for collapsing

* Multithread workload (#89)

added multithreading to allow multiple dfgs to be scheduled concurrently; minor dse fixes;

* Support the tag of stream status (#92)

* it compiles, remove dse

* remove dse

* tagged accumulation

* merge fixes

* name change

* submodule

* submodule name

* commit fixes

* commit fixes

* fixed dump all resources

Co-authored-by: Jian Weng <jian.weng@ucla.edu>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "3rd-party/cxxopts"]
 	path = 3rd-party/cxxopts
 	url = https://github.com/jarro2783/cxxopts
-[submodule "3rd-party/cptl"]
-	path = 3rd-party/cptl
+[submodule "CTPL"]
+	path = 3rd-party/ctpl
 	url = https://github.com/vit-vit/CTPL.git
